--- a/GGDB/app/src/main/AndroidManifest.xml
+++ b/GGDB/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.viktoras.ggdb" >
 
+    <uses-feature android:name="android.hardware.wifi" />
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
