--- a/GGDB/app/src/main/AndroidManifest.xml
+++ b/GGDB/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.viktoras.ggdb" >
 
-    <uses-feature android:name="android.hardware.wifi" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
 
         android:allowBackup="true"
