--- a/GGDB/app/src/main/AndroidManifest.xml
+++ b/GGDB/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:name=".Login"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".Search"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
