--- a/GGDB/app/build.gradle
+++ b/GGDB/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.0"
 
     defaultConfig {
-        applicationId "com.example.viktoras.ggdb"
+        applicationId "com.psi_stud.arturas.ggdb"
         minSdkVersion 17
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile project(':jtds-1.2.7')
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile files('libs/jtds-1.2.7/jtds-1.2.7.jar')
 }
