--- a/GGDB/app/src/main/AndroidManifest.xml
+++ b/GGDB/app/src/main/AndroidManifest.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.viktoras.ggdb" >
-
+    package="com.psi_stud.arturas.ggdb" >
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,12 +17,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Login"
-            android:label="@string/app_name">
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" >
         </activity>
         <activity
-            android:name=".Search"
-            android:label="@string/app_name">
+            android:name=".RegisterActivity"
+            android:label="@string/title_activity_register" >
         </activity>
     </application>
 
